--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -51,10 +51,17 @@ body {
 }
 .section-title {
   margin-top: 0;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   color: var(--secondary-text-color);
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: setLineHeight(33px, 28px);
   text-align: center;
   letter-spacing: 0.03em;
+  @media screen and (min-width: $tablet) {
+  }
+  @media screen and (min-width: $desktop) {
+    font-size: 36px;
+    line-height: setLineHeight(42px, 36px);
+    margin-bottom: 50px;
+  }
 }
