--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -9,11 +9,14 @@ body {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  padding-top: 61px;
+
+  &.modal-open {
+    overflow: hidden;
+  }
+
   @media screen and (min-width: $tablet) {
   }
   @media screen and (min-width: $desktop) {
-    padding-top: 81px;
   }
 }
 .list {
@@ -28,9 +31,12 @@ body {
   color: inherit;
 }
 .container {
-  width: 100%;
   padding: 0 15px;
   margin: 0 auto;
+  @media screen and (max-width: $telephone) {
+    width: 100%;
+  }
+  width: $telephone;
   @media screen and (min-width: $tablet) {
     width: $tablet;
   }
