--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -14,15 +14,19 @@
     opacity: 0;
     pointer-events: none;
   }
+
+  @media screen and (max-width: $tablet) {
+    padding-top: 93px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  @media screen and (min-width: $tablet) {
+  }
+  @media screen and (min-width: $desktop) {
+  }
 }
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  height: 581px;
-  padding: 40px;
   background: var(--background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -32,6 +36,27 @@
 
   .backdrop.is-hidden & {
     transform: translate(-50%, -50%) scale(1.1);
+  }
+
+  @media screen and (max-width: $telephone) {
+    width: 100%;
+  }
+  @media screen and (min-width: $telephone) and (max-width: $tablet) {
+    width: 450px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  @media screen and (min-width: $tablet) {
+  }
+  @media screen and (min-width: $desktop) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    width: 528px;
+    height: 581px;
+    padding: 40px;
   }
 }
 .modal__cross-frame {
@@ -181,6 +206,9 @@
   @include customTransition(outline-color);
 
   .modal-form__checkbox:checked + & {
+    outline-color: var(--input-border-active-color);
+  }
+  .modal-form__checkbox:focus + & {
     outline-color: var(--input-border-active-color);
   }
 }
