--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -4,10 +4,22 @@
   padding-bottom: 60px;
 }
 .footer__container {
-  display: flex;
-  align-items: baseline;
+  @media screen and (min-width: $tablet) {
+  }
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    align-items: baseline;
+  }
 }
 .footer-group {
+  text-align: center;
+  margin-bottom: 60px;
+  @media screen and (min-width: $tablet) {
+  }
+  @media screen and (min-width: $desktop) {
+    text-align: left;
+    margin-bottom: 0;
+  }
 }
 .footer-group__title {
   margin-top: 0;
@@ -15,15 +27,24 @@
 
   color: var(--background-color);
   font-size: 14px;
-  line-height: 1.14;
+  line-height: setLineHeight(16px, 14px);
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
 .social__footer-group {
-  margin-left: 70px;
+  @media screen and (min-width: $tablet) {
+  }
+  @media screen and (min-width: $desktop) {
+    margin-left: 70px;
+  }
 }
 .subscribe__footer-group {
-  margin-left: 93px;
+  margin-bottom: 0;
+  @media screen and (min-width: $tablet) {
+  }
+  @media screen and (min-width: $desktop) {
+    margin-left: 93px;
+  }
 }
 .footer-contacts {
   @extend .list;
