--- a/sass/layouts/_gallery.scss
+++ b/sass/layouts/_gallery.scss
@@ -1,35 +1,71 @@
 .gallery-filter {
   @extend .list;
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+  margin-top: -15px;
+  margin-left: -4px;
+  margin-right: -4px;
+  @media screen and (min-width: $tablet) {
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 50px;
+  }
 }
 .gallery-filter__item {
-  & + & {
-    margin-left: 8px;
+  margin-top: 15px;
+  margin-left: 4px;
+  margin-right: 4px;
+  @media screen and (min-width: $tablet) {
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+    & + & {
+      margin-left: 8px;
+    }
+  }
+  @media screen and (min-width: $desktop) {
   }
 }
 .gallery {
   @extend .list;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+
+  @media screen and (min-width: $tablet) {
+  }
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 }
 .gallery-item {
-  max-width: 370px;
   border-bottom: 1px solid var(--gallery-border-color);
-  margin-right: 30px;
-  margin-bottom: 30px;
-  &:nth-child(3n) {
-    margin-right: 0px;
+  &:not(:last-child) {
+    margin-bottom: 30px;
   }
-  &:nth-last-child(-n + 3) {
-    margin-bottom: 0px;
+  @media screen and (min-width: $tablet) {
   }
-
-  perspective: 900px;
+  @media screen and (min-width: $desktop) {
+    max-width: 370px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    &:nth-child(3n) {
+      margin-right: 0px;
+    }
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0px;
+    }
+  }
 }
 .gallery-item__link {
+  display: block;
   @extend .link;
   padding: 0;
   position: relative;
@@ -45,6 +81,8 @@
   overflow: hidden;
 }
 .gallery-item__image {
+  display: block;
+  width: 100%;
 }
 .gallery-item__overlay-bkg {
   position: absolute;
