--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -109,10 +109,44 @@
   background-color: transparent;
   border: 0;
   color: var(--secondary-text-color);
+  & .hamburger__icon-close {
+    display: none;
+  }
+  &.is-open .hamburger__icon-menu {
+    display: none;
+  }
+  &.is-open .hamburger__icon-close {
+    display: block;
+  }
   @media screen and (min-width: $tablet) {
     display: none;
   }
 }
 .hamburger__icon {
   fill: currentColor;
+}
+
+.menu-container {
+  background-color: palegoldenrod;
+  padding: 20px;
+  text-align: center;
+  font-size: 20px;
+
+  @media screen and (max-width: 767px) {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+
+    &.is-open {
+      display: block;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+    flex-grow: 1;
+  }
 }
