--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -19,6 +19,7 @@
     padding-top: 93px;
     padding-left: 15px;
     padding-right: 15px;
+    overflow-y: scroll;
   }
 
   @media screen and (min-width: $tablet) {
