--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -13,6 +13,9 @@ body {
   &.modal-open {
     overflow: hidden;
   }
+  &.mobile-menu-open {
+    overflow: hidden;
+  }
 
   @media screen and (min-width: $tablet) {
   }
