--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -15,10 +15,12 @@
 }
 .page-header__container {
   @extend .container;
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+// =================== navigation =====================
 .navigation {
   display: flex;
   align-items: center;
@@ -58,17 +60,22 @@
 }
 .current {
   color: var(--accent-color);
-  &::after {
-    content: '';
-    position: absolute;
-    bottom: -1px;
-    left: 0;
-    background-color: var(--accent-color);
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
+  @media screen and (min-width: $tablet) {
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: -1px;
+      left: 0;
+      background-color: var(--accent-color);
+      width: 100%;
+      height: 4px;
+      border-radius: 2px;
+    }
+  }
+  @media screen and (min-width: $desktop) {
   }
 }
+// =================== contacts =====================
 .header-contacts {
   @extend .list;
   display: none;
@@ -102,21 +109,37 @@
   fill: currentColor;
   margin-right: 10px;
 }
+// =================== hamburger =====================
 .hamburger {
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 30;
+
   display: inline-flex;
   margin: 0;
   padding: 0;
   background-color: transparent;
   border: 0;
   color: var(--secondary-text-color);
+  @include customTransition(color);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
   & .hamburger__icon-close {
-    display: none;
+    // display: none;
+    opacity: 0;
   }
   &.is-open .hamburger__icon-menu {
-    display: none;
+    // display: none;
+    opacity: 0;
   }
   &.is-open .hamburger__icon-close {
-    display: block;
+    // display: block;
+    opacity: 1;
   }
   @media screen and (min-width: $tablet) {
     display: none;
@@ -125,28 +148,11 @@
 .hamburger__icon {
   fill: currentColor;
 }
-
-.menu-container {
-  background-color: palegoldenrod;
-  padding: 20px;
-  text-align: center;
-  font-size: 20px;
-
-  @media screen and (max-width: 767px) {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-
-    &.is-open {
-      display: block;
-    }
-  }
-
-  @media screen and (min-width: 768px) {
-    display: flex;
-    justify-content: space-between;
-    flex-grow: 1;
-  }
+.hamburger__icon-close {
+  opacity: 0;
+  @include customTransition(opacity);
+}
+.hamburger__icon-menu {
+  opacity: 1;
+  @include customTransition(opacity);
 }
