--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -26,7 +26,7 @@
   }
 }
 .hero__title {
-  width: 360px;
+  max-width: 360px;
   margin: 0 auto 30px;
   font-size: 26px;
   line-height: setLineHeight(42px, 26px);
