--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -28,36 +28,42 @@
   }
 }
 .modal {
+  position: relative;
+  padding: 40px;
   background: var(--background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-
+  transform: scale(1);
   @include customTransition(transform);
 
   .backdrop.is-hidden & {
-    transform: translate(-50%, -50%) scale(1.1);
+    transform: scale(1.1);
   }
 
-  @media screen and (max-width: $telephone) {
+  @media screen and (max-width: ($telephone - 1px)) {
     width: 100%;
   }
-  @media screen and (min-width: $telephone) and (max-width: $tablet) {
+  @media screen and (min-width: $telephone) and (max-width: ($tablet - 1px)) {
     width: 450px;
     margin-left: auto;
     margin-right: auto;
   }
 
   @media screen and (min-width: $tablet) {
-  }
-  @media screen and (min-width: $desktop) {
+    width: 450px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
+
+    .backdrop.is-hidden & {
+      transform: translate(-50%, -50%) scale(1.1);
+    }
+  }
+  @media screen and (min-width: $desktop) {
     width: 528px;
     height: 581px;
-    padding: 40px;
   }
 }
 .modal__cross-frame {
@@ -94,6 +100,10 @@
 .modal-form {
   display: flex;
   flex-direction: column;
+  @media screen and (max-width: $desktop) {
+    font-size: 12px;
+    line-height: setLineHeight(14px, 12px);
+  }
 }
 .modal-form__item {
   position: relative;
