--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -7,6 +7,7 @@
   height: 100%;
   opacity: 1;
   background: var(--backdrop-color);
+  overflow-y: scroll;
 
   @include customTransition(opacity);
 
@@ -19,7 +20,7 @@
     padding-top: 93px;
     padding-left: 15px;
     padding-right: 15px;
-    overflow-y: scroll;
+    // overflow-y: scroll;
   }
 
   @media screen and (min-width: $tablet) {
@@ -60,10 +61,25 @@
     .backdrop.is-hidden & {
       transform: translate(-50%, -50%) scale(1.1);
     }
+    @media screen and (max-height: $tablet) {
+      top: 10%;
+      left: 50%;
+      transform: translate(-50%, 0) scale(1);
+
+      .backdrop.is-hidden & {
+        transform: translate(-50%, 0) scale(1.1);
+      }
+    }
   }
   @media screen and (min-width: $desktop) {
     width: 528px;
     height: 581px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    .backdrop.is-hidden & {
+      transform: translate(-50%, -50%) scale(1.1);
+    }
   }
 }
 .modal__cross-frame {
