--- a/sass/components/_subscribe-form.scss
+++ b/sass/components/_subscribe-form.scss
@@ -1,8 +1,11 @@
 .subscribe-form {
   @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   @media screen and (min-width: $desktop) {
-    display: flex;
+    flex-direction: row;
   }
 }
 .subscribe-form__email {
@@ -29,9 +32,10 @@
     border-color: var(--accent-color);
   }
   @media screen and (min-width: $tablet) {
-    width: 358px;
+    width: 450px;
   }
   @media screen and (min-width: $desktop) {
+    width: 358px;
   }
 }
 .subscribe-form__button-primary {
