--- a/sass/layouts/_benefits.scss
+++ b/sass/layouts/_benefits.scss
@@ -9,6 +9,8 @@
   @extend .list;
 
   @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-wrap: wrap;
   }
   @media screen and (min-width: $desktop) {
     display: flex;
@@ -19,13 +21,20 @@
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  & + & {
-    margin-top: 30px;
-  }
-  @media screen and (min-width: $tablet) {
-    width: 354px;
+  @media screen and (max-width: ($tablet - 1px)) {
     & + & {
-      margin-top: 0;
+      margin-top: 30px;
+    }
+  }
+  @media screen and (min-width: $tablet) and (max-width: ($desktop - 1px)) {
+    width: 354px;
+    margin-left: 30px;
+    margin-bottom: 30px;
+    &:nth-child(2n + 1) {
+      margin-left: 0;
+    }
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0;
     }
   }
   @media screen and (min-width: $desktop) {
