--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -13,13 +13,24 @@
 .clients__item {
   // flex-basis: calc((100%-30px) / 2);
   width: calc((100% - 30px) / 2);
-  &:nth-child(2n) {
+  @media screen and (max-width: ($tablet - 1px)) {
+    &:nth-child(2n) {
+      margin-left: 30px;
+    }
+    &:not(:nth-last-child(-n + 2)) {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width: $tablet) and (max-width: $desktop) {
+    width: calc((100% - 60px) / 3);
     margin-left: 30px;
-  }
-  &:not(:nth-last-child(-n + 2)) {
     margin-bottom: 30px;
-  }
-  @media screen and (min-width: $tablet) {
+    &:nth-child(3n + 1) {
+      margin-left: 0;
+    }
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
   }
   @media screen and (min-width: $desktop) {
     width: 170px;
