--- a/sass/layouts/_gallery.scss
+++ b/sass/layouts/_gallery.scss
@@ -38,19 +38,32 @@
   @extend .list;
 
   @media screen and (min-width: $tablet) {
-  }
-  @media screen and (min-width: $desktop) {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-content: flex-start;
+  }
+  @media screen and (min-width: $desktop) {
   }
 }
 .gallery-item {
-  border-bottom: 1px solid var(--gallery-border-color);
-  &:not(:last-child) {
-    margin-bottom: 30px;
+  // border-bottom: 1px solid var(--gallery-border-color);
+  @media screen and (max-width: ($tablet - 1px)) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: $tablet) and (max-width: ($desktop - 1px)) {
+    width: calc((100% - 30px) / 2);
+    // height: 440px;
+    margin-left: 30px;
+    margin-bottom: 30px;
+    &:nth-child(2n + 1) {
+      margin-left: 0;
+    }
+    &:nth-last-child(-n + 1) {
+      margin-bottom: 0;
+    }
   }
   @media screen and (min-width: $desktop) {
     max-width: 370px;
@@ -68,12 +81,16 @@
   display: block;
   @extend .link;
   padding: 0;
+  border-bottom: 1px solid var(--gallery-border-color);
   position: relative;
   transition: box-shadow 250ms var(--timing-function);
   &:hover,
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+  @media screen and (min-width: $tablet) and (max-width: ($desktop - 1px)) {
+    height: 100%;
   }
 }
 .gallery-item__wrap {
