--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -36,7 +36,7 @@
   letter-spacing: 0.02em;
   margin-left: 93px;
 
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: $tablet) {
     display: flex;
   }
 }
@@ -84,11 +84,19 @@
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  @media screen and (min-width: $tablet) and (max-width: $desktop) {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
   @media screen and (min-width: $desktop) {
     display: flex;
   }
 }
 .header-contacts__item {
+  @media screen and (max-width: $desktop) {
+    margin-left: 0;
+  }
   margin-left: 50px;
   &:first-child {
     margin-left: 0;
@@ -103,6 +111,11 @@
   &:hover,
   &:focus {
     color: var(--accent-color);
+  }
+  @media screen and (max-width: $desktop) {
+    padding: 5px 0px;
+  }
+  @media screen and (min-width: $desktop) {
   }
 }
 .header-contacts__icon {
