--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -4,6 +4,8 @@
 .team {
   @extend .list;
   @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-wrap: wrap;
   }
   @media screen and (min-width: $desktop) {
     display: flex;
@@ -14,12 +16,20 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  & + & {
-    margin-top: 30px;
-  }
-  @media screen and (min-width: $tablet) {
+  @media screen and (max-width: ($tablet - 1px)) {
     & + & {
-      margin-top: 0;
+      margin-top: 30px;
+    }
+  }
+  @media screen and (min-width: $tablet) and (max-width: ($desktop - 1px)) {
+    width: 354px;
+    margin-left: 30px;
+    margin-bottom: 30px;
+    &:nth-child(2n + 1) {
+      margin-left: 0;
+    }
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0;
     }
   }
   @media screen and (min-width: $desktop) {
