--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -22,6 +22,11 @@ body {
   @media screen and (min-width: $desktop) {
   }
 }
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 .list {
   list-style: none;
   margin: 0;
