--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -6,23 +6,47 @@
   // min-width: 350px;
   margin-left: auto;
   margin-right: auto;
-  background-color: var(--footer-background-color);
-  background-image: linear-gradient(to right, var(--hero-gradient), var(--hero-gradient)),
-    url('../images/squoosh_hero-Img.jpg');
-  // background-position: center;
-  // background-size: cover;
-  // background-repeat: no-repeat;
   text-align: center;
   letter-spacing: 0.06em;
-  @media screen and (min-width: $tablet) {
-    width: $tablet;
+  background-color: var(--footer-background-color);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  background-image: linear-gradient(to right, var(--hero-gradient), var(--hero-gradient)),
+    url(../images/header/header-mobile-img-480x400/img-min.jpg);
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: linear-gradient(to right, var(--hero-gradient), var(--hero-gradient)),
+      url(../images/header/header-mobile-img-480x400/img@2x-min.jpg);
   }
+
+  @media screen and (min-width: 481px) {
+    background-image: linear-gradient(to right, var(--hero-gradient), var(--hero-gradient)),
+      url(../images/header/header-tablet-img-768x400/img-min.jpg);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, var(--hero-gradient), var(--hero-gradient)),
+        url(../images/header/header-tablet-img-768x400/img@2x-min.jpg);
+    }
+  }
+  @media screen and (min-width: 769px) {
+    // width: $tablet;
+    background-image: linear-gradient(to right, var(--hero-gradient), var(--hero-gradient)),
+      url(../images/header/header-desktop-img-1600x600/img-min.jpg);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, var(--hero-gradient), var(--hero-gradient)),
+        url(../images/header/header-desktop-img-1600x600/img@2x-min.jpg);
+    }
+  }
+
+  // @media screen and (min-width: $tablet) {
+  //   width: $tablet;
+  // }
   @media screen and (min-width: $desktop) {
     padding-top: 200px;
     padding-bottom: 200px;
 
     height: 600px;
-    width: 1600px;
+    max-width: 1600px;
   }
 }
 .hero__title {
@@ -37,7 +61,7 @@
   @media screen and (min-width: $tablet) {
   }
   @media screen and (min-width: $desktop) {
-    width: 696px;
+    max-width: 696px;
     font-size: 44px;
     line-height: 1.36;
   }
