fix: Fix fonts path

--- a/css/main.css
+++ b/css/main.css
@@ -25,13 +25,13 @@
 
 @font-face {
   font-family: "GoodTimes-Regular";
-  src: local(""), url("../../assets/fonts/Good-Times-Font/good times rg.ttf") format("truetype");
+  src: local("GoodTimes-Regular"), url("../assets/fonts/Good-Times-Font/good times rg.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "GoodTimes-Bold";
-  src: local(""), url("../../assets/fonts/Good-Times-Font/Good Times W00 Bold.ttf") format("truetype");
+  src: local("GoodTimes-Bold"), url("../assets/fonts/Good-Times-Font/Good Times W00 Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
