fix: Fix font path in _common.scss

--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'GoodTimes-Regular';
   src: local('GoodTimes-Regular'),
-    url('../assets/fonts/Good-Times-Font/good times rg.ttf') format('truetype');
+    url('../../CentrumD/assets/fonts/Good-Times-Font/good times rg.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -9,7 +9,7 @@
 @font-face {
   font-family: 'GoodTimes-Bold';
   src: local('GoodTimes-Bold'),
-    url('../assets/fonts/Good-Times-Font/Good Times W00 Bold.ttf') format('truetype');
+    url('../../CentrumD/assets/fonts/Good-Times-Font/Good Times W00 Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
 }
